* Performance improvement to calendar (Will Dean)
* Performance improvement to inline style generation (used by calendar and message boxes) (Will Dean)
* added edit local stylesheet menu option and a new variable to set for the css editor called cssEditorExe so you can use TopStyle, Dreamweaver, etc (from Brent Beardsley)
* added Belgian National Holidays (from Joris Verhuyck)

New Searches

* dseek - downseek.com software search
* cs - ConsumerSearch.com search meta-reviews of other reviews (from Gregory Krohne)
* hb - Hotbot.com search (from Gregory Krohne)
* otn - Oracle Technology Network search (from Gregory Krohne)
* rw - Search the Ripe Whois Database for IP addresses
* ccase - new function to convert case of a string - lower, upper, caps. (from Sarah Sweeney)
* mb - MapBlast.com LineDrive search (from Gregory Krohne)
* fs - FindSounds.com sound file search (from Gregory Krohne)
* dqsd - Search the DQSD mail archive (Gregory Krohne)
* phpb - Search PHPBuilder (from Sarah Sweeney)
* tr - Search ThomasRegister (from Brent Beardsley)
* ct - Search Content Type List (from Brent Beardsley)
* tldp - Search The Linux Documentation Project (from Brent Beardsley)
* blb - Search the bible at BlueLetterBible.org (from Brent Beardsley)
* thelist - Search evlot.org's thelist archives (from Sarah S.)
* evolt - Search evolt.org (from Sarah S.)
* htmlh - Search htmlhelp.com (from JB)

Bug Fixes

* Installation script now sets approved shell extension registry key for WinNT and it's descendants (from Brent Beardsley)
* Fix for bug [ 643947 ] up/down keys incompatible with Japanese (from Gregg Tavares)

Modified Searches

* fe - now allows you to specify an extension name instead of only the first letter (from Matthew McDougal)
* configure - localized it and added Reload menu option, fixed bug when addons directory did not exist (from Brent Beardsley)
* amaz - added /referral switch for building referral links for Amazon